# voting_application

./: README.md  pyproject.toml
api/: settings.py  urls.py
authentication/: authentication.py  models.py
authentication/migrations/: 0001_initial.py
users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_otp.py
users/templates/users/emails/: share.html  share.txt
vote/: admin.py  models.py  serializers.py  urls.py  views.py
vote/migrations/: 0001_initial.py  0002_remove_poll_voter_poll_voter.py  0003_rename_voter_poll_voters.py  0004_alter_poll_voters.py
